fix cors for deployment